js/js.translator/testData/incremental/invalidation/addCompanionBlockToParent/lib1/l1.1.kt
var staticInitParent = false

open class Parent {
    val someField: Int = 0
    companion {
        val parentValue: Unit = run {
            staticInitParent = true
            Unit
        }
    }
}
